# duckdb_dbt_projeto

./: .user.yml  README.md  profiles.yml  pyproject.toml  vendas.csv  vendas.duckdb
dbt_project/: dbt_project.yml
dbt_project/models/bronze/: vendas_raw.sql
dbt_project/models/gold/: total_vendas_por_cliente.sql
dbt_project/models/silver/: vendas_limpas.sql
src/: busca_dados.py
