[project]
name = "duckdb-dbt-projeto"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Moreira",email = "rafaelmoreiracvo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb (>=1.3.1,<2.0.0)",
    "dbt-duckdb (>=1.9.4,<2.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
